fix main title on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -36,8 +36,8 @@ body {
   letter-spacing: 1px;
   font-weight: bold;
   white-space: nowrap;
-  left: 6%;
-  right: 6%;
+  left: 2%;
+  right: 2%;
   position: absolute;
   bottom: 1%;
   font-family: Coffee;
